--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -1,17 +1,17 @@
 es:
   devise:
     confirmations:
-      confirmed: "Su dirección de correo electrónico ha sido confirmé con éxito."
+      confirmed: "Su dirección de correo electrónico ha sido confirmada con éxito."
       send_instructions: "Usted recibirá un correo electrónico con instrucciones sobre cómo confirmar su dirección de correo electrónico en unos pocos minutos."
       send_paranoid_instructions: "Si existe su dirección de correo electrónico en nuestra base de datos , recibirá un correo electrónico con instrucciones sobre cómo confirmar su dirección de correo electrónico en unos pocos minutos."
     failure:
       already_authenticated: "Ya has iniciado sesión."
       inactive: "Tu cuenta aún no está activada."
       invalid: "Invalido %{authentication_keys} o contraseña."
-      locked: "Your account is locked."
-      last_attempt: "Tiene un intento más antes de que su cuenta está bloqueada .."
-      not_found_in_database: "Invalido %{authentication_keys} or contraseña."
-      timeout: "Su sesión ha finalizado . Por favor inicie sesión de nuevo para continuar."
+      locked: "Su cuenta esta bloqueada."
+      last_attempt: "Tiene un intento más antes de que su cuenta sea bloqueada .."
+      not_found_in_database: "Invalido %{authentication_keys} o contraseña."
+      timeout: "Su sesión ha finalizado Debe identificarse de nuevo para continuar."
       unauthenticated: "Es necesario iniciar sesión o registrarse antes de continuar."
       unconfirmed: "Usted tiene que confirmar su dirección de correo electrónico antes de continuar."
     mailer:
@@ -22,25 +22,25 @@ es:
       unlock_instructions:
         subject: "instrucciones de Desbloqueo"
     omniauth_callbacks:
-      failure: "No se pudo autenticar a partir %{kind} porque \"%{reason}\"."
+      failure: "No se pudo autenticar  autenticar desde %{kind} porque \"%{reason}\"."
       success: "Autenticado de éxito %{kind} cuenta."
     passwords:
       no_token: "No se puede acceder a esta página sin que viene de un mensaje de restablecimiento de contraseña. Si viene de un mensaje de restablecimiento de contraseña, por favor asegúrese de que ha utilizado la URL completa proporcionada"
       send_instructions: "Usted recibirá un correo electrónico con instrucciones sobre cómo restablecer su contraseña en unos pocos minutos ."
       send_paranoid_instructions: "Si existe su dirección de correo electrónico en nuestra base de datos, usted recibirá un enlace de recuperación de la contraseña a su dirección de correo electrónico en unos pocos minutos"
-      updated: "Tu contraseña ha sido cambiada exitosamente. Ahora está iniciado sesión."
-      updated_not_active: "tu contraseña ha sido cambiada exitosamente."
+      updated: "Su contraseña ha sido cambiada exitosamente. Ahora está iniciado sesión."
+      updated_not_active: "Su contraseña ha sido cambiada con éxito."
     registrations:
-      destroyed: ¡Adiós! Su cuenta se ha cancelado correctamente . Esperamos volver a verte pronto.."
-      signed_up: "Welcome! You have signed up successfully."
-      signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
-      signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
-      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
-      updated: "Your account has been updated successfully."
+      destroyed: "Adiós Su cuenta se ha cancelado correctamente Esperamos verle de nuevo ."
+      signed_up: "Bienvenido! Te has registrado con éxito.."
+      signed_up_but_inactive: "Usted se haya registrado con éxito Sin embargo, ¿no podría iniciar sesión porque la cuenta aún no está activada."
+      signed_up_but_locked: "Usted se haya registrado con éxito Sin embargo, no hemos podido identificarle porque su cuenta está bloqueada."
+      signed_up_but_unconfirmed: "Un mensaje con un enlace de confirmación ha sido enviado a su dirección de correo electrónico Por favor, siga el enlace para activar su cuenta."
+      update_needs_confirmation: "Usted actualiza su cuenta con éxito, pero tenemos que verificar su nueva dirección de correo electrónico Por favor, compruebe su correo electrónico y sigue el enlace de confirmación para confirmar su nueva dirección de correo electrónico."
+      updated: "Su cuenta ha sido actualizado correctamente."
     sessions:
       signed_in: "inicio sesión exitosamente."
-      signed_out: "Cerro sessión exitosamente."
+      signed_out: "Cerro sesión exitosamente."
       already_signed_out: "Signed out successfully."
     unlocks:
       send_instructions: "Usted recibirá un correo electrónico con instrucciones para desbloquear su cuenta en pocos minutos ."
@@ -51,8 +51,8 @@ es:
       already_confirmed: "Ya se confirmó , intenta acceder"
       confirmation_period_expired: "necesita ser confirmadas dentro de %{period},por favor solicite uno nuevo"
       expired: "ha caducado, por favor solicitar uno nuevo"
-      not_found: "not found"
+      not_found: "no se encontró"
       not_locked: "extraviado"
       not_saved:
-        one: "1 error esta prohibida %{resource} se guarden:"
-        other: "%{count} errors error esta prohibida %{resource} se guarden:"
+        one: "1 error prohibido este%{resource}  que se guarden:"
+        other: "%{count} errors error esta prohibida %{resource} se guarde:"
